# bachday

./: .gitignore  CLAUDE.md  README.md  process_dataset.py  pyproject.toml
.github/workflows/: deploy.yml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: phrases.json
web/src/: abc.ts  abcjs.d.ts  accuracy.ts  cue.ts  live-trace.ts  main.ts  pitch.ts  schedule.ts  solfege.ts  storage.ts  style.css  voice.ts
