[project]
name = "bachday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "converter21>=4.0.1",
    "ipykernel>=7.2.0",
    "jupytext>=1.19.3",
    "music21>=10.3.0",
    "notebook>=7.5.6",
    "pip>=26.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.3",
]
